# gwy-z-module

./: .gitignore  Dockerfile  Makefile.am  README  README.md  configure.ac  gwyddion-release-36-1.fc36.noarch.rpm  z-module.c  z-module.spec
